...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewArrivalLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/arrival_time"
                android:textSize="18sp"
...
                tools:ignore="MissingConstraints" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewProtocolLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/protocol"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textViewInfoProtocol"
                android:layout_width="238dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text=""
                app:layout_constraintEnd_toEndOf="parent"
...
                tools:ignore="MissingConstraints" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewSrcLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/src"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/textViewInfoSrc"
                android:layout_width="238dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/_0_0_0_0"
                app:layout_constraintEnd_toEndOf="parent"
...
                tools:ignore="MissingConstraints" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewSrcPortLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/port"
                android:textSize="18sp"
...
                tools:ignore="MissingConstraints" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewDstLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/dst"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
            <TextView
                android:id="@+id/textViewInfoDest"
                android:layout_width="228dp"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/_0_0_0_0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textViewInfoSrc" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/textViewDstPortLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/port"
                android:textSize="18sp"
...
                android:layout_marginTop="4dp"
                android:text="@string/_0_0_0_0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textViewInfoSrc" />
        </TableRow>
        <TableRow
            android:id="@+id/tcpRowFlags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <TextView
                android:id="@+id/textViewTcpFlagsLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/flags"
                android:textSize="18sp"
...
                android:layout_marginTop="4dp"
                android:text="@string/sqr_brckts"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textViewInfoSrc" />
        </TableRow>
        <TableRow
            android:id="@+id/tcpRowAck"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <TextView
                android:id="@+id/textViewAckLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/ack"
                android:textSize="18sp"
...
                android:layout_marginTop="4dp"
                android:text="@string/_0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textViewInfoSrc" />
        </TableRow>
        <TableRow
            android:id="@+id/tcpRowSeq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <TextView
                android:id="@+id/textViewSeqLabel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/seq"
                android:textSize="18sp"
...
                app:layout_constraintTop_toBottomOf="@+id/textViewInfoSrc" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:text="@string/finish"
                android:onClick= "closeActivity"
                app:layout_constraintEnd_toEndOf="parent"
...
